Updating module-info.java